Added Tab Navigation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,14 @@
 {
     "cSpell.words": [
+        "arrowleft",
+        "arrowright",
+        "bottomtext",
         "Entypo",
         "firestore",
         "Signin",
         "Signout",
-        "Signup"
+        "Signup",
+        "smedium",
+        "toptext"
     ]
 }
