fixed sign in and sign out with async

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "bottomtext",
         "Entypo",
         "firestore",
+        "Ophora",
         "Signin",
         "Signout",
         "Signup",
