--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-bottom-tabs": "^6.2.17",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.4.0",
+    "firebase": "^10.5.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-native": "0.72.5",
     "react-native-calendars": "^1.1301.0",
+    "react-native-dialogs": "^1.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-settings-components": "^0.0.2",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
+    "@types/react-native-vector-icons": "^6.4.15",
     "typescript": "^5.1.3"
   },
   "private": true
