adding event info and display

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "arrowleft",
         "arrowright",
         "bottomtext",
+        "datetimepicker",
         "Entypo",
         "firestore",
         "Ophora",
