--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "react-icons": "^4.11.0",
     "react-native": "0.72.5",
     "react-native-calendars": "^1.1301.0",
+    "react-native-date-picker": "^4.3.3",
     "react-native-dialogs": "^1.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-settings-components": "^0.0.2",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
