applying datetimepicker visible but not functional

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Entypo",
         "firestore",
         "Ophora",
+        "Pressable",
         "Signin",
         "Signout",
         "Signup",
