--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@mux/mux-player": "^2.0.1",
+    "@mux/mux-player-react": "^2.0.1",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-bottom-tabs": "^6.2.17",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/react-navigation": "^3.4.0",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-native": "0.72.5",
     "react-native-calendars": "^1.1301.0",
@@ -29,10 +35,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-settings-components": "^0.0.2",
     "react-native-vector-icons": "^10.0.0",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
