--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "types":["node", "react", "eslint"],
     "esModuleInterop": true,
     "jsx": "react",
     "strict": true,
