attempting to fix firestore db and make profile pg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,17 @@
         "datetimepicker",
         "Entypo",
         "firestore",
+        "Ionicons",
         "Ophora",
         "Pressable",
+        "Reiki",
         "Signin",
         "Signout",
         "Signup",
         "smedium",
+        "SSPDQDRJ",
+        "stepforward",
+        "Syug",
         "toptext"
     ]
 }
