--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-bottom-tabs": "^6.2.17",
+    "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react-navigation": "^3.4.0",
     "expo": "~49.0.8",
+    "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
     "lodash": "^4.17.21",
@@ -35,8 +37,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-settings-components": "^0.0.2",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.19.6",
-    "expo-av": "~13.4.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
